kubernetes/apps/envoy-gateway-system/envoy-gateway/gateway/external.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    metallb.io/loadBalancerIPs: '2a02:a313:43e4:7080::7dc5'
#    metallb.io/address-pool: public
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  gatewayClassName: eg
  addresses:
    - type: IPAddress
      value: "2a02:a313:43e4:7080::7dc5"
  infrastructure:
    annotations:
#      metallb.io/address-pool: public
      metallb.io/loadBalancerIPs: '2a02:a313:43e4:7080::7dc5'
      external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: proxy-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
#      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-${SECRET_DOMAIN/./-}-tls
