kubernetes/apps/envoy-gateway-system/envoy-gateway/gateway/internal.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    metallb.io/address-pool: private
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
spec:
  gatewayClassName: eg
  addresses:
    - type: IPAddress
      value: "fd42:78a5:2c09::200"
  infrastructure:
    annotations:
      metallb.io/address-pool: private
      external-dns.alpha.kubernetes.io/hostname: "internal.${SECRET_DOMAIN}"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-${SECRET_DOMAIN/./-}-tls
