kubernetes/apps/envoy-gateway-system/envoy-gateway/gateway/backendtrafficpolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: compression
spec:
  compression:
    - type: Brotli
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
