kubernetes/apps/envoy-gateway-system/envoy-gateway/gateway/redirect.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: http
    - name: external
      namespace: envoy-gateway-system
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: www-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  hostnames: [ "${SECRET_DOMAIN}" ]
  rules:
    - filters:
        - requestRedirect:
            hostname: "www.${SECRET_DOMAIN}"
            statusCode: 301
          type: RequestRedirect
      matches:
        - path:
            type: Exact
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: robots-txt
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  # Optionally lock to your domains:
#  hostnames:
#     - ${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: Exact
            value: /robots.txt
      filters:
        # Add cache headers (optional but nice)
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Cache-Control
                value: public, max-age=600
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: robots-txt-filter
